[tool.poetry]
name = "auto-reloader"
version = "0.1.2"
description = "Automatic reloading library for Jupyter"
authors = ["moisutsu <moisutsu@gmail.com>"]
readme = "README.md"

repository = "https://github.com/moisutsu/auto-reloader"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
